2010-04-02  Jb Evain  <jbevain@novell.com>

	* SortedSetTest.cs: add tests for GetViewBetween.

2010-04-02  Jb Evain  <jbevain@novell.com>

	* SortedSetTest.cs: add tests for Min and Max.

2010-04-02  Jb Evain  <jbevain@novell.com>

	* SortedSetTest.cs: add test for RemoveWhere.

2010-04-02  Jb Evain  <jbevain@novell.com>

	* SortedSetTest.cs: add test for Reverse.

2010-04-02  Jb Evain  <jbevain@novell.com>

	* SortedSetTest.cs: add new fixture.

2009-12-01  Jb Evain  <jbevain@novell.com>

	* StackTest.cs: add a test ensuring that disposing the stack
	enumerator prevents to iterate further.

2009-11-25  Jb Evain  <jbevain@novell.com>

	* QueueTest.cs: add test for a specific combination of
	calls that make the queue crash when enqueuing an item.

2009-11-25  Jb Evain  <jbevain@novell.com>

	* QueueTest.cs: add tests for ICollection.CopyTo.

2009-07-31  Raja R Harinath  <harinath@hurrynot.org>

	* SortedDictionaryTest.cs (Enumerator_Current): New test.
	(KeyEnumerator_Current, ValueEnumerator_Current): Likewise.

2009-07-14 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* SortedListTest.cs: new tests for bug #521750 provided by
	Kevin Fitzgerald.

2009-05-10  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* LinkedListTest.cs: Added test for #481621,
	converted from example code by Andy Hume <andyhume32@yahoo.co.uk>.

2009-03-11  Zoltan Varga  <vargaz@gmail.com>

	* SortedListTest.cs: Add tests for #483985.

2009-05-06  Pia Eriksson  <pe@hallerud.se>

	* SortedListTest.cs: Added test for CopyTo
	* LinkedListTest.cs: Test for CopyTo extended w. case when Count == 0
	* LinkedListTest.cs: Test for CopyTo extended w. case when Count == 0
	* QueueTest.cs: Test for CopyTo extended w. case when Count == 0
	* StackTest.cs: Test for CopyTo extended w. case when Count == 0
	* SortedDictionaryTest.cs: Added test for CopyTo on SortedDictionary,
	SortedDictionary.Keys and SortedDictionary.Values

2007-08-20  Jb Evain  <jbevain@novell.com>
